crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__type_comment_syntax_error.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/type_comment_syntax_error.py
---
## Input

```python
def foo(
    # type: Foo
    x): pass
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,5 +1,5 @@
 def foo(
-    # type: Foo
-    x,
+        # type: Foo
+        x,
 ):
     pass
```

## Ruff Output

```python
def foo(
        # type: Foo
        x,
):
    pass
```

## Black Output

```python
def foo(
    # type: Foo
    x,
):
    pass
```
